mariadb/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mariadb-instance
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
  selector:
    app: mariadb-instance
