mariadb/mariadb-np.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: mariadb-instance
  namespace: mariadb
spec:
  podSelector:
    matchLabels:
      app: mariadb-instance
      component: data-science-pipelines
  ingress:
    - ports:
        - protocol: TCP
          port: 3306
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: data-science-pipelines-operator
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: opendatahub
        - podSelector:
            matchLabels:
              app: ds-pipeline-instance
              component: data-science-pipelines
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: mas-inst1-aibroker
        - podSelector:
            matchLabels:
              app: ds-pipeline-metadata-grpc-instance
              component: data-science-pipelines
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: mas-inst1-aibroker
  policyTypes:
    - Ingress
